--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.x/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -14,6 +15,20 @@
         <h1>Weather Dashboard</h1>
         </div>
     </header>
+
+    <aside class="col-md-3 custom-margin">
+        <form class="border-bottom">
+            <div class="form-group">
+              <label for="city-search" class="h2">Search for a City:</label>
+              <input type="city name" class="form-control" id="city-search" aria-describedby="location" placeholder="San Diego">
+            </div>
+            <button type="submit" id="submit" class="btn btn-primary mt-3 mb-3 custom-button btn-info">Submit</button>
+          </form>
+        
+        <div id="search-list"></div>
+    </aside>
+
+    <section></section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
